--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -42,6 +42,10 @@
   version = "1.7.0"
 
 [[constraint]]
+  name = "github.com/sirupsen/logrus"
+  version = "1.3.0"
+
+[[constraint]]
   branch = "master"
   name = "github.com/skip2/go-qrcode"
 
