--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -34,12 +34,8 @@
   name = "github.com/dimaskiddo/go-whatsapp"
 
 [[constraint]]
-  name = "github.com/gorilla/handlers"
-  version = "1.4.0"
-
-[[constraint]]
-  name = "github.com/gorilla/mux"
-  version = "1.7.0"
+  name = "github.com/go-chi/chi"
+  version = "4.0.2"
 
 [[constraint]]
   name = "github.com/sirupsen/logrus"
@@ -51,7 +47,7 @@
 
 [[constraint]]
   name = "github.com/spf13/viper"
-  version = "1.3.1"
+  version = "1.3.2"
 
 [prune]
   go-tests = true
