--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,12 +26,12 @@
 
 
 [[constraint]]
-  name = "github.com/dgrijalva/jwt-go"
-  version = "3.2.0"
+  branch = "master"
+  name = "github.com/Rhymen/go-whatsapp"
 
 [[constraint]]
-  branch = "master"
-  name = "github.com/dimaskiddo/go-whatsapp"
+  name = "github.com/dgrijalva/jwt-go"
+  version = "3.2.0"
 
 [[constraint]]
   name = "github.com/go-chi/chi"
