--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,26 +1,36 @@
 before:
- hooks:
-  - make ensure
+  hooks:
+    - make ensure
 builds:
-- env:
-  - CGO_ENABLED=0
-- goos:
-  - darwin
-  - linux
-  - windows
-archive:
-  replacements:
-    darwin: Darwin
-    linux: Linux
-    windows: Windows
-    386: i386
-    amd64: x86_64
+- binary: go-whatsapp
+  env:
+    - CGO_ENABLED=0
+  ldflags:
+    - -s -w -X main.build={{ .Version }} -X main.commit={{ .ShortCommit }} -X main.date={{ .Date }}
+  goos:
+    - darwin
+    - linux
+    - windows
+  goarch:
+    - 386
+    - amd64
+archives:
+- replacements:
+    darwin: macos
+    linux: linux
+    windows: windows
+    386: 32-bit
+    amd64: 64-bit
+  format: zip
+  files:
+    - README.md
+    - share/*
+    - share/**/*
 checksum:
   name_template: 'checksums.txt'
 snapshot:
-  name_template: "{{ .Tag }}-next"
+  name_template: "{{ .Version }}_{{ .ShortCommit }}"
 changelog:
-  sort: asc
   filters:
     exclude:
     - '^docs:'
