--- a/config/production.yaml
+++ b/config/production.yaml
@@ -2,8 +2,8 @@
 SERVER_NAME: "go-whatsapp-rest"
 SERVER_IP: "0.0.0.0"
 SERVER_PORT: "3000"
-SERVER_STORE_PATH: "./share/store"
-SERVER_UPLOAD_PATH: "./share/upload"
+SERVER_STORE_PATH: "./config/stores"
+SERVER_UPLOAD_PATH: "./config/uploads"
 SERVER_UPLOAD_LIMIT: 8
 SERVER_LOG_LEVEL: "info"
 
@@ -11,8 +11,8 @@ SERVER_LOG_LEVEL: "info"
 ROUTER_BASE_PATH: "/api/v1/whatsapp"
 
 ## Cryptography Configuration
-CRYPT_PRIVATE_KEY_FILE: "./share/private.key"
-CRYPT_PUBLIC_KEY_FILE: "./share/public.key"
+CRYPT_PRIVATE_KEY_FILE: "./config/keys/private.key"
+CRYPT_PUBLIC_KEY_FILE: "./config/keys/public.key"
 
 ## WhatsApp Configuration
 WHATSAPP_CLIENT_VERSION_MAJOR: 2
