--- a/config/development.yaml
+++ b/config/development.yaml
@@ -14,6 +14,9 @@ ROUTER_BASE_PATH: "/api/v1/whatsapp"
 CRYPT_PRIVATE_KEY_FILE: "./config/keys/private.key"
 CRYPT_PUBLIC_KEY_FILE: "./config/keys/public.key"
 
+## Basic Auth Configuration
+AUTH_BASIC_PASSWORD: "83e4060e-78e1-4fe5-9977-aeeccd46a2b8"
+
 ## WhatsApp Configuration
 WHATSAPP_CLIENT_VERSION_MAJOR: 2
 WHATSAPP_CLIENT_VERSION_MINOR: 2035
